--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">Section 1</a></li>
-          <li><a class="main-nav-link" href="#">Section 2</a></li>
-          <li><a class="main-nav-link" href="#">Section 3</a></li>
-          <li><a class="main-nav-link" href="#">Section 4</a></li>
-          <li><a class="main-nav-link" href="#">Section 5</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Section 6</a></li>
+          <li><a class="main-nav-link" href="#">Start eating well</a></li>
+          <li><a class="main-nav-link" href="#">How it works</a></li>
+          <li><a class="main-nav-link" href="#">Meals</a></li>
+          <li><a class="main-nav-link" href="#">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Buy now</a></li>
         </ul>
       </nav>
     </header>
@@ -621,7 +621,7 @@
             ></a>
           </div>
           <p class="copyright">
-            Copyright &copy; 2024 by Igor Zalewski. Inc. All rights reserved
+            Copyright &copy; 2024 by Omnifood. Inc. All rights reserved
           </p>
         </div>
         <div class="footer-col">
